# serializer version: 1
# name: test_numbers[number.device_name_away_extract_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 70,
      'min': 30,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_away_extract_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'Away extract fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'away_extract_fan_setpoint',
    'unique_id': '0000-0001-away_extract_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_away_extract_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power_factor',
      'friendly_name': 'Device Name Away extract fan setpoint',
      'max': 70,
      'min': 30,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_away_extract_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '40',
  })
# ---
# name: test_numbers[number.device_name_away_supply_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 74,
      'min': 30,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_away_supply_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'Away supply fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'away_supply_fan_setpoint',
    'unique_id': '0000-0001-away_supply_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_away_supply_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power_factor',
      'friendly_name': 'Device Name Away supply fan setpoint',
      'max': 74,
      'min': 30,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_away_supply_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '42',
  })
# ---
# name: test_numbers[number.device_name_cooker_hood_extract_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 30,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_cooker_hood_extract_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'Cooker hood extract fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cooker_hood_extract_fan_setpoint',
    'unique_id': '0000-0001-cooker_hood_extract_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_cooker_hood_extract_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power_factor',
      'friendly_name': 'Device Name Cooker hood extract fan setpoint',
      'max': 100,
      'min': 30,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_cooker_hood_extract_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50',
  })
# ---
# name: test_numbers[number.device_name_cooker_hood_supply_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 30,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_cooker_hood_supply_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'Cooker hood supply fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'cooker_hood_supply_fan_setpoint',
    'unique_id': '0000-0001-cooker_hood_supply_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_cooker_hood_supply_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power_factor',
      'friendly_name': 'Device Name Cooker hood supply fan setpoint',
      'max': 100,
      'min': 30,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_cooker_hood_supply_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '70',
  })
# ---
# name: test_numbers[number.device_name_fireplace_extract_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 30,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_fireplace_extract_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'Fireplace extract fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fireplace_extract_fan_setpoint',
    'unique_id': '0000-0001-fireplace_extract_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_fireplace_extract_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power_factor',
      'friendly_name': 'Device Name Fireplace extract fan setpoint',
      'max': 100,
      'min': 30,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_fireplace_extract_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '56',
  })
# ---
# name: test_numbers[number.device_name_fireplace_supply_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 30,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_fireplace_supply_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'Fireplace supply fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fireplace_supply_fan_setpoint',
    'unique_id': '0000-0001-fireplace_supply_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_fireplace_supply_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power_factor',
      'friendly_name': 'Device Name Fireplace supply fan setpoint',
      'max': 100,
      'min': 30,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_fireplace_supply_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '77',
  })
# ---
# name: test_numbers[number.device_name_high_extract_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 70,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_high_extract_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'High extract fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'high_extract_fan_setpoint',
    'unique_id': '0000-0001-high_extract_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_high_extract_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power_factor',
      'friendly_name': 'Device Name High extract fan setpoint',
      'max': 100,
      'min': 70,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_high_extract_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_numbers[number.device_name_high_supply_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 74,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_high_supply_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'High supply fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'high_supply_fan_setpoint',
    'unique_id': '0000-0001-high_supply_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_high_supply_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power_factor',
      'friendly_name': 'Device Name High supply fan setpoint',
      'max': 100,
      'min': 74,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_high_supply_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_numbers[number.device_name_home_extract_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 40,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_home_extract_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'Home extract fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'home_extract_fan_setpoint',
    'unique_id': '0000-0001-home_extract_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_home_extract_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power_factor',
      'friendly_name': 'Device Name Home extract fan setpoint',
      'max': 100,
      'min': 40,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_home_extract_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '70',
  })
# ---
# name: test_numbers[number.device_name_home_supply_fan_setpoint-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 42,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.device_name_home_supply_fan_setpoint',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'Home supply fan setpoint',
    'platform': 'flexit_bacnet',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'home_supply_fan_setpoint',
    'unique_id': '0000-0001-home_supply_fan_setpoint',
    'unit_of_measurement': '%',
  })
# ---
# name: test_numbers[number.device_name_home_supply_fan_setpoint-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power_factor',
      'friendly_name': 'Device Name Home supply fan setpoint',
      'max': 100,
      'min': 42,
      'mode': <NumberMode.SLIDER: 'slider'>,
      'step': 1,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.device_name_home_supply_fan_setpoint',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '74',
  })
# ---
